# chronicle-forge

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: design.md  design_p10_observatory.md  design_p10_social_memory.md  design_p11_world_model.md  design_p11b_social_memory_l2.md  design_p12_narrative_observatory.md  design_p13_character_observatory.md  design_p14_timeline_observatory.md  design_p15_vertical_slice.md  design_p16_mvp_cohesion.md  design_p6_execution.md  design_p6_salience.md  design_p8_player_experience.md  design_p9_1_save_load.md  design_p9_2_transcript_export.md  design_p9_3_replay.md  design_p9_4_lineage_viewer.md  design_p9_5_heritage_explorer.md  design_p9_persistent_history.md  playtest_p35.md  playtest_p5.md  review_p4.md
scripts/: opportunity_playlog.py
tests/: test_activity.py  test_ai.py  test_autoplay.py  test_character_observatory.py  test_cli_export.py  test_cli_mvp.py  test_cli_play.py  test_combat_npc.py  test_cycle_detection.py  test_determinism.py  test_discovery.py  test_execution.py  test_experience.py  test_export.py  test_gallery.py  test_heritage.py  test_heritage_explorer.py  test_integration.py  test_life.py  test_lineage.py  test_macro.py  test_memory_powers.py  test_models.py  test_narrative.py  test_observatory.py  test_packaging.py  test_persistence.py  test_play_gate.py  test_play_human.py  test_play_render.py  test_play_session.py  test_record.py  test_replay.py  test_reporting.py  test_salience.py  test_social_memory.py  test_social_memory_l2.py  test_theme.py  test_timeline_observatory.py  test_timeskip.py  (+4 more)
(+91 files in other folders)
