[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chronicle-forge"
version = "0.3.0"
description = "A history-creation RPG / reincarnation roguelite / AI-assisted world simulation."
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
]
# Optional: enables the Anthropic-backed AI narration (P4). Without it, all
# features still work via deterministic template fallback.
ai = [
    "anthropic>=0.40",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
